# 4569-2020-changeup

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  toolchain.cmake
src/robot/: CMakeLists.txt
src/robot/src/: main.cpp
src/shared_robot_interface/: CMakeLists.txt
src/shared_robot_interface/src/: shared_robot_interface.cpp  shared_robot_interface.h
src/simulator/: CMakeLists.txt
src/simulator/src/: simulator_robot_api.cpp  simulator_robot_api.h
src/simulator/src/robot/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Robot.sln  Robot.vcxproj  Robot.vcxproj.filters  cmake_install.cmake
src/simulator/src/shared_robot_api/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  SharedRobotAPI.sln  SharedRobotAPI.vcxproj  SharedRobotAPI.vcxproj.filters  cmake_install.cmake
src/simulator/src/simulator/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Simulator.sln  Simulator.vcxproj  Simulator.vcxproj.filters  cmake_install.cmake
